@@ -125,7 +125,7 @@ Drupal.admin.getCache = function (hash, onSuccess) {
       Drupal.admin.hashes.hash = status;
     }
   });
-}
+};
 
 /**
  * @defgroup admin_behaviors Administration behaviors.
@@ -172,7 +172,7 @@ Drupal.admin.behaviors.replacements = function (context, settings, $adminMenu) {
   for (var item in settings.admin_menu.replacements) {
     $(item, $adminMenu).html(settings.admin_menu.replacements[item]);
   }
-}
+};
 
 /**
  * Inject destination query strings for current page.
@@ -183,7 +183,7 @@ Drupal.admin.behaviors.destination = function (context, settings, $adminMenu) {
       this.search += (!this.search.length ? '?' : '&') + Drupal.settings.admin_menu.destination;
     });
   }
-}
+};
 
 /**
  * Apply JavaScript-based hovering behaviors.
